Updated presentation with slide for contiki nodes

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -107,7 +107,7 @@ The other functionalities are already well implemented by the \texttt{CoAPthon} 
 \end{frame}
 
 
-\subsubsection{Plus: Broker Docker container}
+\subsubsection{Plus: Docker container}
 \begin{frame}
 \frametitle{Plus: Broker Docker container}
 The Docker container has been defined in order to ease deployment of the Broker application and IPv6 configuration of the server machine.
@@ -151,6 +151,13 @@ networks:
 	\end{Verbatim}
 \end{exampleblock}
 \end{frame}
+
+\subsection{Pub/Sub nodes}
+\frametitle{Publisher/Subscriber nodes}
+\begin{frame}
+	Publisher and subscriber nodes are implemented using the \texttt{Contiki} platform and the \texttt{Erbium} CoAP framework
+\end{frame}
+
 %------------------------------------------------
 \section{Use-Case scenario}
 \begin{frame}
@@ -174,7 +181,7 @@ networks:
 
 
 %------------------------------------------------
-
+\section{References}
 \begin{frame}
 \frametitle{References}
 \footnotesize{
@@ -190,14 +197,14 @@ networks:
 }
 \end{frame}
 %------------------------------------------------
-
+\section{Demo}
 \begin{frame}
 \Huge{\centerline{Demo Time!}}
 \end{frame}
 
 
 %------------------------------------------------
-
+\section{EOF}
 \begin{frame}
 \Huge{\centerline{EOF}\centerline{Questions?}}
 \end{frame}
